--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/mydb
-spring.datasource.username=root
-spring.datasource.password=MinutE_BurgeR
+spring.datasource.username=dm
+spring.datasource.password=password
 spring.jpa.properties.hibernate.format_sql=true 
 
 
